--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@theia/plugin": "next",
     "@theia/plugin-packager": "latest",
     "rimraf": "2.6.2",
-    "typescript": "2.9.2",
+    "typescript": "^3.1.6",
     "typescript-formatter": "7.2.2"
   },
   "scripts": {
@@ -31,8 +31,10 @@
     "backend": "lib/theia-serve-plugin-backend.js"
   },
   "dependencies": {
+    "@types/express": "^4.16.0",
     "@types/finalhandler": "^0.0.33",
     "@types/serve-static": "^1.13.2",
+    "express": "^4.16.4",
     "finalhandler": "^1.1.1",
     "serve-static": "^1.13.2"
   }
