--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "backend": "lib/theia-serve-plugin-backend.js"
   },
   "dependencies": {
+    "@types/debug": "^0.0.31",
     "@types/express": "^4.16.0",
-    "@types/finalhandler": "^0.0.33",
+    "@types/fs-extra": "^5.0.4",
     "@types/serve-static": "^1.13.2",
+    "debug": "^4.1.0",
     "express": "^4.16.4",
-    "finalhandler": "^1.1.1",
+    "fs-extra": "^7.0.1",
     "serve-static": "^1.13.2"
   }
 }
