--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "theia-serve-plugin",
-  "publisher": "theia",
-  "keywords": [
-    "theia-plugin"
-  ],
+  "name": "ts-server",
   "version": "0.0.1",
   "license": "none",
   "files": [
     "src"
   ],
   "devDependencies": {
-    "@theia/plugin": "next",
-    "@theia/plugin-packager": "latest",
     "rimraf": "2.6.2",
     "typescript-formatter": "7.2.2"
   },
@@ -21,10 +15,8 @@
     "format-code": "tsfmt -r",
     "watch": "tsc -watch",
     "compile": "tsc",
-    "build": "yarn run format-code && yarn run compile && theia:plugin pack"
-  },
-  "engines": {
-    "theiaPlugin": "next"
+    "build": "yarn run format-code && yarn run compile",
+    "start": "node lib/run-server.js"
   },
   "theiaPlugin": {
     "backend": "lib/theia-serve-plugin-backend.js"
@@ -33,11 +25,11 @@
     "@types/debug": "^0.0.31",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.4",
-    "@types/serve-static": "^1.13.2",
+    "@types/minimist": "^1.2.0",
     "debug": "^4.1.0",
-    "typescript": "^3.1.6",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
-    "serve-static": "^1.13.2"
+    "minimist": "^1.2.0",
+    "typescript": "^3.1.6"
   }
 }
