--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   ],
   "devDependencies": {
     "rimraf": "2.6.2",
-    "typescript-formatter": "7.2.2"
+    "typescript-formatter": "7.2.2",
+    "@types/debug": "^0.0.31",
+    "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.4",
+    "@types/minimist": "^1.2.0"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
@@ -22,10 +26,6 @@
     "backend": "lib/theia-serve-plugin-backend.js"
   },
   "dependencies": {
-    "@types/debug": "^0.0.31",
-    "@types/express": "^4.16.0",
-    "@types/fs-extra": "^5.0.4",
-    "@types/minimist": "^1.2.0",
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
