--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "src"
   ],
   "devDependencies": {
-    "rimraf": "2.6.2",
-    "typescript-formatter": "7.2.2",
     "@types/debug": "^0.0.31",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.4",
-    "@types/minimist": "^1.2.0"
+    "@types/http-proxy-middleware": "^0.19.1",
+    "@types/minimist": "^1.2.0",
+    "rimraf": "2.6.2",
+    "typescript-formatter": "7.2.2"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
@@ -26,6 +27,7 @@
     "debug": "^4.1.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
+    "http-proxy-middleware": "^0.19.1",
     "minimist": "^1.2.0",
     "typescript": "^3.1.6"
   }
